# agent-shield

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSPIRATIONS.md  INSTALL_AGENT.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
agent_shield/: __init__.py  _error_policy.py  _result.py  _self_lockout_allowlist.py  _telemetry.py  audit.py  bash_guard.py  config.py  plugin_cli.py  sanitize.py  skill_vetting.py  structured_output.py  write_guard.py
agent_shield/adapters/: __init__.py  claude_code.py  openclaw.py  openclaw_plugin.ts
agent_shield/adapters/openclaw_plugin/: index.ts  openclaw.plugin.json  package.json
demo/: README.md  demo.sh  render_card.py
docs/: AUDIT_SCHEMA.md  CONFIGURATION.md  MIGRATION.md  REMOTE_ANCHORING.md  SANITIZATION.md  STRUCTURED_OUTPUT.md  VETTING_ESCALATION.md  adapter_status.md
examples/: README.md  before-after.md  claude-code-settings.example.json  fetch-wrap.example.py  hook-cli-pipe.example.sh  library-use.example.py  remote_anchor_shipper.py
tests/: _bash_resolve.py  bash-guard.sh  conftest.py  run_equivalence_test.py  run_sh_tests.sh  test_adapter_claude_code.py  test_adapter_equivalence.py  test_adapter_openclaw.py  test_audit.py  test_audit_cannot_evaluate_outcomes.py  test_bash_write_guards.py  test_cli.py  test_config.py  test_config_doc_claims.py  test_config_error_policy.py  test_config_harness.py  test_config_health_probe.py  test_config_preset_forcing.py  test_doc_claims.py  test_enforcement_contract.py  test_error_policy_resolver.py  test_example_fetch_wrap.py  test_migration_doc_claims.py  test_observe_visibility.py  test_openclaw_plugin_shape.py  test_packaging.py  test_plugin_cli.py  test_python_floor.py  test_red_on_error.py  test_red_only_submode.py  test_result_cannot_evaluate.py  test_sanitize.py  test_sanitize_doc_claims.py  test_security_hardening.py  test_self_lockout_allowlist.py  test_skill_vetting.py  test_structured_output.py  test_structured_output_doc_claims.py  test_version_coherence.py  write-guard.sh
